--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     padding: 0rem;
 }
 body { 
-    font-family: Gentium Basic, serif; 
+    font-family: Zilla Slab, serif; 
     font-weight: normal;
     font-size: 18px;
     width: auto;
