--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@
     padding: 0rem;
 }
 body { 
-    font-family: Zilla Slab, serif; 
-    font-weight: normal;
+    font-family: Source Sans Pro, sans-serif; 
+    font-weight: lighter;
     font-size: 18px;
     width: auto;
     margin: 3rem;
@@ -17,7 +17,7 @@ body {
     /* margin-top: 4rem; */
 }
 h1,h2,h4 {
-    font-family: Eczar;
+    font-family: Source Sans Pro;
     font-weight: normal;
     /* margin: 0; */
 }
