--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@
 }
 body { 
     font-family: Source Sans Pro, sans-serif; 
-    font-weight: lighter;
-    font-size: 18px;
+    /* font-weight: lighter; */
+    font-size: 16px;
     width: auto;
     margin: 3rem;
     line-height: 1.5;
@@ -29,7 +29,7 @@ h2 {
     font-size: 24px;
 }
 h4 {
-    font-size: 22px;
+    font-size: 16px;
     font-weight: lighter;
 }
 
@@ -65,6 +65,12 @@ td.dissem {
 }
 .table-icon{
     width: 18rem;
+    border: 1px solid var(--pen-color);
+    margin: 0 5px 0 0;
+    border-radius: 5px;
+}
+.page-img{
+    width: 14rem;
     border: 1px solid var(--pen-color);
     margin: 0 5px 0 0;
     border-radius: 5px;
